--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ html{
 }
 body {
     background-color: var(--background);
-    font-family: 'Nunito Sans';
+    font-family: 'Nunito Sans',sans-serif;
     color: var(--main);
 }
 a { 
