--- a/main.css
+++ b/main.css
@@ -232,6 +232,8 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 20px 18px 0px 18px;
+    padding: 18px 18px 18px 18px;
 }
 .acc__title{
     cursor:pointer;
@@ -387,6 +389,9 @@ img{
         width: 39vw;
         margin: 20px 20px 20px 20px;
         padding: 20px 20px 10px 20px;
+    }
+    .projectSelect{
+        padding: 20px 20px 20px 20px;
     }
     .projectSelect:hover, .projectArchive:hover{
         box-shadow: var(--boxshadow);
