--- a/main.css
+++ b/main.css
@@ -53,6 +53,7 @@ html{
     scroll-behavior: smooth;
 }
 body {
+    position: relative;
     background-color: var(--background);
     font-family: 'Nunito Sans',sans-serif;
     color: var(--main);
@@ -97,8 +98,8 @@ h2 {
 }
 .arrow {
     text-align: center;
-    position: relative;
-    top: -25vh;
+    position: absolute;
+    bottom: 15vh;
     z-index: 1;
 }
 .subtitle{
@@ -139,8 +140,8 @@ h2 {
 #work, #about{
     display: block; 
     position: relative; 
-    top: -100px; 
     visibility: hidden;
+    top: -10vh;
 }
 
 /* GENERAL AND MOBILE STYLE */
@@ -180,6 +181,7 @@ h2 {
     box-shadow: 0px 1px 10px var(--shadow);
 }
 #header{
+    position:relative;
     background-color: var(--background);
     display: flex;
     flex-direction: column;
@@ -342,12 +344,6 @@ img{
 
 /* DESKTOP AND TABLET STYLE */
 @media screen and (min-width: 750px) {
-    /* #navigationContainer {
-        background-color: var(--desktopnav);
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        -ms-backdrop-filter:blur(10px);
-    } */
     h1{
         font-size: 50px;
     }
@@ -355,7 +351,7 @@ img{
         font-size: 27px;
     }
     .arrow{
-        top: -10vh;
+        bottom: 5vh;
     }
     .subtitle_bold{
         font-size:17px;
@@ -421,9 +417,6 @@ img{
     .dropdownArrow{
         margin-top: 0px;
     }
-    #work, #about{
-        top: -150px; 
-    }
 }
 
 /* DESKTOP ONLY STYLE */
@@ -470,8 +463,10 @@ img{
 }
 @media screen and (min-width: 1400px) {
     #header{
-        margin-left: 12vw;
-        max-width: 900px;
+        margin:auto;
+    }
+    #headerText{
+        margin-right: 25vw;
     }
     .projectArchive, .projectSelect{
         width: 32vw;
