--- a/main.css
+++ b/main.css
@@ -32,8 +32,8 @@
     --projectcolor: #212121CC;
     --projectcolor1hover:#292929;
     --projectcolor2hover:#292929;
-    --background: #111111;
-    --desktopnav:  #11111199;
+    --background: #0A0A0A;
+    --desktopnav:  #0A0A0A99;
     --shadow: #000000B3;
     --border: 1px;
     --projectborder:0px;
