dark mode update

--- a/main.css
+++ b/main.css
@@ -34,7 +34,7 @@
     --projectcolor2hover:#292929;
     --background: #0A0A0A;
     --desktopnav:  #0A0A0A99;
-    --shadow: #000000B3;
+    --shadow: #000000;
     --border: 1px;
     --projectborder:0px;
     --boxshadow: none;
