--- a/main.css
+++ b/main.css
@@ -188,6 +188,7 @@ h2 {
     height: 100vh;
     width: 100vw;
     padding: 10% 10% 30% 10%; 
+    z-index:-1;
 }
 #headerText{
     display: flex;
