--- a/main.css
+++ b/main.css
@@ -364,10 +364,12 @@ img{
     a:hover{
         color: var(--main) !important;
     }
+    #projectArchiveContainer{
+        align-items: flex-start;
+    }
     #projectContainer{
         display:flex;
         flex-direction: column;
-        align-items: center;
     }
     .row{
         flex-direction: row;
