--- a/main.css
+++ b/main.css
@@ -119,7 +119,7 @@ h2 {
 .customsubtitle{
     font-weight:300;
     line-height: 50px;
-    font-size: 20px;
+    font-size: 18px;
 }
 .hoverBold{
     color: var(--main);
@@ -200,10 +200,14 @@ h2 {
 }
 .projectSectionTitle{
     text-transform: uppercase;
-    text-align:center;
+    text-align:left;
     font-style: italic;
     letter-spacing: 0.2rem;
     font-size: 25px;
+    margin: auto;
+    max-width: 85vw;
+    padding: 10px;
+    line-height: 30px;
 }
 #projectContainer, #projectArchiveContainer{
     display:flex;
@@ -285,7 +289,7 @@ h2 {
 }
 #profileContainer{
     display:flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     flex-shrink: 3;
     justify-content: center;
     margin:auto;
@@ -301,12 +305,12 @@ img{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 30px;
 }
 #profileText{
     max-width:90vw;
     text-align: left;
-    padding: 20px;
+    padding: 10px;
     padding-top: 10px;
 }
 #rightIcons{
@@ -391,9 +395,16 @@ img{
     }
     #profileContainer{
         max-width: 80vw;
+        flex-direction: row;
+    }
+    #profileImage{
+        justify-content: flex-start;
     }
     .dropdownArrow{
         margin-top: 0px;
+    }
+    .projectSectionTitle{
+        max-width: 80vw;
     }
 }
 
@@ -448,9 +459,6 @@ img{
         font-size: 14px;
         margin:5px;
     }
-    #profileText{
-        width: 55vw;
-    }
     #profileContainer{
         flex-direction:row;
     }
@@ -465,11 +473,11 @@ img{
     .projectArchive, .projectSelect{
         width: 32vw;
     }
-    #profileText{
-        width: 40vw;
-    }
     #profileContainer{
-        max-width:60vw;
+        max-width:65vw;
+    }
+    .projectSectionTitle{
+        max-width: 65vw;
     }
     #bottomIcons{
         display: none;
@@ -495,6 +503,12 @@ img{
     }
     .projectArchive, .projectSelect{
         width: 28vw;
+    }
+    #profileContainer{
+        max-width:57vw;
+    }
+    .projectSectionTitle{
+        max-width: 57vw;
     }
 }
 
