--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;1,200;1,300;1,400;1,600;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;1,200;1,300;1,400;1,600;1,700;1,800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&display=swap');
 @import url("https://use.typekit.net/taw5ebb.css");
@@ -17,7 +17,7 @@
     --projectborder:0px;
     --boxshadow: 5px 5px 15px #d7d7d7;
     --bold: 500;
-    --titlebold: 600;
+    --titlebold: 500;
     --body: 300;
     --filter: none;
     --invert: invert(0);
@@ -36,7 +36,7 @@
     --projectborder:0px;
     --boxshadow: none;
     --bold: 400;
-    --titlebold: 500;
+    --titlebold: 400;
     --body: 200;
     --filter: brightness(0.7);
     --invert: invert(1)
@@ -201,9 +201,10 @@ h2 {
 .projectSectionTitle{
     text-transform: uppercase;
     text-align:left;
-    font-style: italic;
+    font-style: normal;
     letter-spacing: 0.2rem;
-    font-size: 25px;
+    font-size: 20px;
+    font-weight: var(--titlebold);
     margin: auto;
     max-width: 85vw;
     padding: 10px;
