--- a/main.css
+++ b/main.css
@@ -39,7 +39,7 @@
     --titlebold: 400;
     --body: 200;
     --filter: brightness(0.7);
-    --invert: invert(1)
+    --invert: invert(1);
 }
 
 /* GENERAL STYLE */
