--- a/main.css
+++ b/main.css
@@ -81,12 +81,13 @@ br {
 h1{
     font-family: 'Poppins';
     font-weight:var(--body);
-    font-size:35px;
+    font-size:32px;
+    letter-spacing: 0.05rem;
 }
 h2 {
     font-family: 'Poppins';
     font-weight: var(--titlebold);
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.05rem;
 }
 .fa, .fab, .fas{
     color: var(--light);
@@ -161,10 +162,11 @@ h2 {
     color: var(--main);
     margin-left:10px;
     font-size: 22px;
+    letter-spacing: 0.05rem;
     cursor: pointer;
 }
 .nav-item{
-    letter-spacing: 0.1rem;
+    letter-spacing: 0.05rem;
     padding-left: 2px;
     padding-right: 2px;
 }
@@ -192,6 +194,10 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
+#headerSubText{
+    padding-top: 10px;
+    font-size: 16px;
 }
 #headertag{
     display: none;
@@ -352,6 +358,10 @@ img{
     #headerText{
         min-width:65vw;
     }
+    #headerSubText{
+        max-width: 65vw;
+        font-size: 24px;
+    }
     #header{
         margin-left: 0;
         width: 100vw;
@@ -497,6 +507,9 @@ img{
     }
     #headerText{
         min-width: 56vw;
+    }
+    #headerSubText{
+        font-size: 32px;
     }
     .projectArchive, .projectSelect{
         width: 28vw;
