--- a/main.css
+++ b/main.css
@@ -167,8 +167,9 @@ h2 {
 }
 .nav-item{
     letter-spacing: 0.05rem;
-    padding-left: 2px;
-    padding-right: 2px;
+    padding-left: 5px;
+    padding-right: 5px;
+    z-index: 3;
 }
 .navbar-light .navbar-nav .nav-link{
     color:var(--main);
