--- a/main.css
+++ b/main.css
@@ -118,11 +118,6 @@ h2 {
     font-weight:300;
     color: var(--light);
 }
-.customsubtitle{
-    font-weight:300;
-    line-height: 50px;
-    font-size: 18px;
-}
 .hoverBold{
     color: var(--main);
 }
@@ -290,11 +285,12 @@ h2 {
     justify-self: flex-end;
 }
 .projecttag {
-    border-style: solid;
+    border-style:solid;
     border-width: 1px;
     border-radius: 40px;
     background-color: var(--projectcolor);
     font-size: 11px;
+    font-weight: var(--body);
     padding: 5px 10px 5px 10px;
     margin: 4px;
 }
