--- a/main.css
+++ b/main.css
@@ -419,6 +419,7 @@ img{
     }
     #headertag{
         display: flex;
+        margin: 0;
         margin-top:20px;
         font-size: 20px;
         color: var(--main);
