--- a/main.css
+++ b/main.css
@@ -152,7 +152,7 @@ h2 {
     top: 0;
     width: 100%;
     z-index: 1;
-    transition: all 0.5s ease-in-out
+    transition: transform 0.3s ease-in-out;
 }
 #navigationName{
     color: var(--main);
